
                     ngIRCd - Next Generation IRC Server

                        (c)2001-2005 Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngIRCd CVSHEAD

  - Code cleanups from Florian Westphal, <westphal@foo.fh-furtwangen.de>.
  - Raised the maximum length of passwords to 20 characters.
  - Fixed a memory leak when resizing the connection pool and realloc()
    failed. Now we don't fall back to malloc(), which should be sane anyway.
    Patch from Florian Westphal, <westphal@foo.fh-furtwangen.de>.
  - Added support for the Howl (http://www.porchdogsoft.com/products/howl/)
    Rendezvous API, in addition to the API of Apple (Mac OS X). The available
    APU will be autodetected when you call "./configure --with-rendezvous".
  - Made ngIRCd compile on HP/UX 10.20 with native HP pre-ANSI C compiler and
    most probably other older C compilers on other systems.
  - When the daemon should switch to another user ID (ServerID is defined in
    the configuration file) and is not running in a chroot environment, it
    changes it's working directory to the home directory of this user. This
    should enable the system to write proper core files when not running with
    root privileges ...

ngIRCd 0.8.3 (2005-02-03)

  - Fixed a bug that could case a root exploit when the daemon is compiled
    to do IDENT lookups and is logging to syslog. Bug discovered by CoKi,
    <coki@nosystem.com.ar>, thanks a lot!
    (http://www.nosystem.com.ar/advisories/advisory-11.txt)

ngIRCd 0.8.2 (2005-01-26)

  - Added doc/SSL.txt to distribution.
  - Fixed a buffer overflow that could cause the daemon to crash. Bug found
    by Florian Westphal, <westphal@foo.fh-furtwangen.de>.
  - Fixed a possible buffer underrun when reading the MOTD file. Thanks