@@ -1,4 +1,4 @@
-# $Id: sample-ngircd.conf,v 1.29 2005/01/17 12:51:17 alex Exp $
+# $Id: sample-ngircd.conf,v 1.30 2005/02/04 14:24:21 alex Exp $
 
 #
 # This is a sample configuration file for the ngIRCd, which must be adepted
@@ -66,6 +66,12 @@
 	# ATTENTION: For this to work the server must have been started
 	# with root privileges!
 	;ChrootDir = /var/empty
+
+	# This tells ngircd to write its current process id to a file.
+	# Note that the pidfile is written AFTER chroot and switching uid, i.e.
+	# the Directory the pidfile resides in must be writeable by the ngircd user and
+	# exist in the chroot dir.
+	;PidFile = /var/run/ngircd/ngircd.pid
 
 	# After <PingTimeout> seconds of inactivity the server will send a
 	# PING to the peer to test whether it is alive or not.
